Reintroducing JAVA_OPTS environmental variable for neo4j-admin
The support for JAVA_OPTS was accidentally lost in in 4.3

The primary motivation is to give an option to override
'dbms.jvm.additional' taken from the server config,
but giving users an option to provide JVM settings
for admin commands is generally a useful feature.